--- a/index.html
+++ b/index.html
@@ -589,6 +589,12 @@
   <span class="font-semibold text-red-700">Anti-Ragging & Emergency Help</span>
 </a>
 
+
+                 <a href="https://uzairaiservices.blogspot.com/" class="grid-card" title="Level Up Your Study With AI">
+  <i class="fas fa-robot text-red-600 text-2xl" aria-hidden="true"></i>
+  <span class="font-semibold text-red-700">Level Up Your Study With AI.</span>
+</a>
+
                    
               <a href="admin.html" class="grid-card">
                     <i class="fas fa-user-shield text-4xl mb-3 text-primary"></i>
@@ -839,5 +845,6 @@
     <script defer src="https://static.getbutton.io/widget/bundle.js?id=U3DId"></script>
 </body>
 </html>
+
 
 
