--- a/index.html
+++ b/index.html
@@ -590,9 +590,14 @@
 </a>
 
 
+                <a href="https://www.mgkvp.ac.in/Home/ANNOUNCEMENTS_News?page=1" class="grid-card" title="MGKVP Official News Page">
+   <i class="fas fa-newspaper text-red-600 text-2xl" aria-hidden="true"></i>
+  <span class="font-semibold text-red-700">MGKVP Official News Page</span>
+</a>
+                
                  <a href="https://uzairaiservices.blogspot.com/" class="grid-card" title="Level Up Your Study With AI">
   <i class="fas fa-robot text-red-600 text-2xl" aria-hidden="true"></i>
-  <span class="font-semibold text-red-700">Level Up Your Study With AI.</span>
+  <span class="font-semibold text-red-700">Level Up Your Study With A.I.</span>
 </a>
 
                    
@@ -845,6 +850,7 @@
     <script defer src="https://static.getbutton.io/widget/bundle.js?id=U3DId"></script>
 </body>
 </html>
+
 
 
 
