--- a/index.html
+++ b/index.html
@@ -584,7 +584,11 @@
 
 
                  
-             <a href="help.html" class="grid-card" title="Emergency Anti-Ragging Help">
+             <a href="donate.html" class="grid-card" title="Donate Help">
+  <i class="fas fa-hand-holding-heart text-red-600 text-2xl" aria-hidden="true"></i>
+  <span class="font-semibold text-red-700">Donate to NGO For Education</span>
+</a>
+                <a href="help.html" class="grid-card" title="Emergency Anti-Ragging Help">
   <i class="fas fa-exclamation-triangle text-red-600 text-2xl" aria-hidden="true"></i>
   <span class="font-semibold text-red-700">Anti-Ragging & Emergency Help</span>
 </a>
@@ -860,6 +864,7 @@
     <script defer src="https://static.getbutton.io/widget/bundle.js?id=U3DId"></script>
 </body>
 </html>
+
 
 
 
