--- a/documentry.html
+++ b/documentry.html
@@ -74,23 +74,26 @@
     </style>
 </head>
 <body :class="[isDarkTheme ? 'dark' : 'light']">
-
     <div id="app" class="flex flex-col min-h-screen">
         <!-- Header -->
-        <header :class="['header-bg', isDarkTheme ? 'dark' : 'light']" class="shadow-xl p-6 sticky top-0 z-50 rounded-b-3xl">
-            <div class="container mx-auto flex justify-between items-center">
-                <a href="index.html" class="px-5 py-2 rounded-full bg-blue-600 text-white font-bold text-lg hover:bg-blue-700 transition-colors duration-300 transform hover:scale-105">
+        <header :class="['header-bg', isDarkTheme ? 'dark' : 'light']" class="shadow-xl p-4 sticky top-0 z-50 rounded-b-3xl">
+            <!-- Changed flex-row to flex-wrap to allow elements to stack on small screens -->
+            <!-- Changed justify-between to items-center to center elements when they wrap -->
+            <div class="container mx-auto flex flex-wrap items-center justify-between gap-4">
+                <!-- Grouping the elements to give them space on small screens -->
+                <a href="index.html" class="flex-shrink-0 px-4 py-2 rounded-full bg-blue-600 text-white font-bold text-base hover:bg-blue-700 transition-colors duration-300 transform hover:scale-105">
                     {{ translations[currentLang].home }}
                 </a>
-                <h1 :class="['text-xl md:text-4xl font-extrabold text-center flex-grow tracking-wider']">
+                <!-- The title is now allowed to grow and shrink as needed -->
+                <h1 :class="['text-lg sm:text-2xl md:text-4xl font-extrabold text-center flex-grow tracking-wider min-w-0 order-first md:order-none']">
                     {{ translations[currentLang].mainTitle }}
                 </h1>
-                <div class="flex items-center space-x-4">
-                    <select v-model="currentLang" :class="[isDarkTheme ? 'bg-gray-700 text-white' : 'bg-gray-300 text-gray-800']" class="rounded-full px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
+                <div class="flex items-center space-x-2 sm:space-x-4 flex-shrink-0">
+                    <select v-model="currentLang" :class="[isDarkTheme ? 'bg-gray-700 text-white' : 'bg-gray-300 text-gray-800']" class="rounded-full px-3 py-1 text-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <option value="en">English</option>
                         <option value="hi">हिन्दी</option>
                     </select>
-                    <button @click="toggleTheme" class="p-3 rounded-full bg-gray-700 dark:bg-gray-300 hover:bg-gray-600 dark:hover:bg-gray-400 focus:outline-none focus:ring-4 focus:ring-blue-500 transition-colors duration-300">
+                    <button @click="toggleTheme" class="p-2 sm:p-3 rounded-full bg-gray-700 dark:bg-gray-300 hover:bg-gray-600 dark:hover:bg-gray-400 focus:outline-none focus:ring-4 focus:ring-blue-500 transition-colors duration-300">
                         <span v-if="isDarkTheme" class="text-yellow-300">🌙</span>
                         <span v-else class="text-gray-700">☀️</span>
                     </button>
@@ -103,7 +106,7 @@
             <h2 :class="['text-center text-3xl md:text-4xl font-bold mb-6 mt-4']">
                 {{ translations[currentLang].tributeTitle }}
             </h2>
-            <p :class="['text-center text-lg mb-10 max-w-3xl mx-auto leading-relaxed']">
+            <p :class="['text-center text-base sm:text-lg mb-10 max-w-3xl mx-auto leading-relaxed']">
                 {{ translations[currentLang].tributeText }}
             </p>
 
@@ -132,7 +135,7 @@
                 <h3 :class="['text-2xl font-bold mb-4', isDarkTheme ? 'text-gray-200' : 'text-gray-800']">
                     {{ translations[currentLang].notesTitle }}
                 </h3>
-                <p :class="['italic text-lg leading-relaxed', isDarkTheme ? 'text-gray-400' : 'text-gray-700']">
+                <p :class="['italic text-base sm:text-lg leading-relaxed', isDarkTheme ? 'text-gray-400' : 'text-gray-700']">
                     {{ translations[currentLang].notesText }}
                 </p>
             </section>
