--- a/ebook.html
+++ b/ebook.html
@@ -34,8 +34,8 @@
   <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
     <header class="flex flex-col sm:flex-row items-center justify-between mb-5">
       <div class="text-center sm:text-left">
-        <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold leading-tight mb-1">CASE STUDY BOOKS FROM (IIMs, ISB and More..)</h1>
-        <p class="text-sm sm:text-base text-muted font-medium mb-4 sm:mb-0">Private reader (embedded PDFs from Google Drive). Choose from dropdown or click a card to read in fullscreen.</p>
+        <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold leading-tight mb-1">EDUCATION SIMPLIFIED E-BOOKS, CASE STUDY BOOKS FROM (IIMs, ISB and More..) </h1>
+        <p class="text-sm sm:text-base text-muted font-medium mb-4 sm:mb-0">Comprehensive e-books and more from leading institutes.</p>
       </div>
       <div class="flex flex-col sm:flex-row items-center gap-2 w-full sm:w-auto mt-4 sm:mt-0">
         <select id="bookSelect" aria-label="Select a book" class="min-w-[150px] sm:min-w-[420px] p-3 rounded-xl border border-[#27304a] bg-[#0f1320] text-text outline-none focus:ring-2 focus:ring-brand focus:border-transparent transition-colors duration-200">
@@ -48,7 +48,7 @@
     <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 mt-5" id="grid" aria-live="polite"></section>
 
     <footer class="mt-7 text-muted text-sm flex flex-col sm:flex-row justify-center items-center gap-2 pt-4 border-t border-[#1e2742] text-center">
-      <span>Journalism Wallah 2025</span>
+      <span>Education Simplified 2025</span>
       <span class="hidden sm:inline">•</span>
       <span>Made by Uzair B2B Services</span>
     </footer>
