--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,31 @@ postEl.innerHTML = `
         // --- Typed.js Initialization ---
         document.addEventListener("DOMContentLoaded", function () {
             var options = {
-                strings: ["B.A. Hons Mass Communication","M.A. Hons Mass Communication","M.J.M.C","B.C.A","College Exam Notes", "Previous Year Question Papers","Free Advance Tools for Yourself", "Competitive Exam Preperation", "Internship Opportunities", "CAT (MBA), UPSC, CUET PG, Study Material", "Create and Download Resume For Free","Portal for Internship / Job Opportunities", "Community Support", "And Much More that will help you in College Journey!"],
+                strings: [
+  "B.A. (Hons) Mass Communication",
+  "M.A. (Hons) Mass Communication",
+  "M.J.M.C",
+  "B.C.A",
+  "M.B.A",
+  "College Exam Notes",
+  "Previous Year Question Papers",
+  "Exam Prep Material",
+  "M.B.A Case Books",
+  "M.B.A Skills Help",
+  "M.B.A Online Library",
+  "Free Advanced Tools",
+  "Create and Download Resume For Free",
+  "Internship Opportunities",
+  "Portal for Internship / Job Opportunities",
+  "CAT (MBA)",
+  "UPSC",
+  "CUET PG",
+  "Competitive Exam Preparation",
+  "Study Material Available",
+  "Community Support",
+  "And Much More that will help you in your College Journey!"
+]
+,
                 typeSpeed: 50,
                 backSpeed: 30,
                 backDelay: 1500,
@@ -1616,6 +1640,7 @@ postEl.innerHTML = `
     
 </body>
 </html>
+
 
 
 
