--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -834,7 +835,7 @@
 <div class="max-w-3xl mx-auto my-10 bg-yellow-400 p-6 rounded-lg shadow-lg border border-primary/20">
 
   <h2 class="text-5xl md:text-6xl font-extrabold text-center mb-16 text-stone-900" style="font-family: 'Playfair Display', serif;">
-            MGKVP Students Looking For Intership / Job
+            Companies / Startup Looking For Students for Insternships & Jobs 
         </h2>
 <div id="data-container" class="overflow-hidden h-[500px] relative bg-gray-200 rounded-lg p-4 shadow-lg border border-gray-300">
             <!-- यहां 'text-white' को 'text-gray-900' में बदल दिया गया है ताकि स्क्रॉल होने वाले बॉक्स के अंदर का टेक्स्ट काला हो जाए -->
@@ -1003,7 +1004,7 @@
             </a>
             <a href="https://educationsimplified.github.io/mgkvp/documentry.html" class="grid-card" title="Documentry Made By Us">
                 <i class="fas fa-film text-blue-600 text-2xl" aria-hidden="true"></i>
-                <span class="font-semibold text-red-700">Documentry Made By Us</span>
+                <span class="font-semibold text-red-700">Documentry</span>
             </a>
             <a href="https://educationsimplified.github.io/mgkvp/ebook.html" class="grid-card" title="E-Book Library">
                 <i class="fas fa-book-open text-red-600 text-2xl" aria-hidden="true"></i>
@@ -1026,17 +1027,18 @@
                 <span>EK Soch</span>
             </a>
             <a href="https://educationsimplified.github.io/mgkvp/job.html" class="grid-card">
-                <i class="fas fa-briefcase"></i>
-                <span>Apply For Internships & Jobs</span>
-            </a>
+             <i class="fas fa-building"></i>
+                <span>Register Your Company to Hire Interns</span>
+                </a>
+
             
             <a href="https://uzairb2b.github.io/resume_maker/" class="grid-card">
                 <i class="fas fa-id-card"></i>
                 <span>Create Resume (FREE)</span>
             </a>
             <a href="https://educationsimplified.github.io/mgkvp/jobseekers.html" class="grid-card">
-                <i class="fas fa-briefcase"></i>
-                <span>Job Seeker Data</span>
+                <i class="fas fa-city"></i>
+                <span>Companies Data</span>
             </a>
             
             </a>
@@ -1322,56 +1324,63 @@ postEl.innerHTML = `
 </footer>
 
 
-     <script>
-    const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRYH7Rlqwq1rupcx23cXSDMhtkijSWvS0tvdmuBwnWNlNkmwva54bAAEr59igvDXBncR9zGnAoY_lI6/pub?gid=468287746&single=true&output=csv';
+<script>
+const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRYH7Rlqwq1rupcx23cXSDMhtkijSWvS0tvdmuBwnWNlNkmwva54bAAEr59igvDXBncR9zGnAoY_lI6/pub?gid=468287746&single=true&output=csv';
 
-    async function loadCSVData() {
-      try {
-        const res = await fetch(SHEET_URL);
-        const csvText = await res.text();
-        const rows = csvText.split('\n').slice(1); // Remove headers
+async function loadCSVData() {
+  try {
+    const res = await fetch(SHEET_URL);
+    const csvText = await res.text();
+    const rows = csvText.split('\n').slice(1);
 
-        const container = document.getElementById('scroll-box');
-        rows.forEach(row => {
-          const cols = row.split(',');
+    const container = document.getElementById('scroll-box');
+    container.innerHTML = "";
 
-          if (cols.length < 9) return; // Skip empty/incomplete rows
+    rows.forEach(row => {
+      const cols = row.split(',');
 
-          const [
-            timestamp,
-            name,
-            age,
-            twelfthPass,
-            qualification,
-            postType,
-            about,
-            resumeLink,
-            whatsapp
-          ] = cols;
+      if (cols.length < 8) return;   // ✅ Now matches your sheet
 
-          const twelfth = twelfthPass.toLowerCase().includes("yes") ? "✅ 12th Passed" : "";
-          const box = document.createElement("div");
-          box.className = "bg-white p-4 shadow-lg rounded-xl border border-gray-200";
+      const [
+        timestamp,
+        companyName,
+        year,
+        lookingFor,
+        qualification,
+        nature,
+        about,
+        linkedin
+      ] = cols;
 
-          box.innerHTML = `
-            <p class="font-semibold text-lg">👤 ${name}</p>
-            <p>🎂 Age: ${age}</p>
-            <p>🎓 ${qualification} ${twelfth ? '| ' + twelfth : ''}</p>
-            <p>💼 Post: ${postType}</p>
-            <p>🔗 <a href="${resumeLink}" target="_blank" class="text-blue-600 underline">Resume</a></p>
-            <p>✍️ ${about}</p>
-          `;
-          container.appendChild(box);
-        });
+      const statusBadge = lookingFor.toLowerCase().includes("yes")
+        ? "✅ Hiring"
+        : "🔴 Not Hiring";
 
-      } catch (error) {
-        document.getElementById('scroll-box').innerHTML =
-          '<p class="text-red-600 text-center">❌ Failed to load data.</p>';
-      }
-    }
+      const box = document.createElement("div");
+      box.className = "bg-white p-4 shadow-lg rounded-xl border border-gray-200";
 
-    loadCSVData();
-  </script>
+      box.innerHTML = `
+        <p class="font-semibold text-lg">🏢 ${companyName}</p>
+        <p>📅 Established: ${year}</p>
+        <p>📌 Status: ${statusBadge}</p>
+        <p>🎓 Requirement: ${qualification}</p>
+        <p>💼 Internship Type: ${nature}</p>
+        <p>✍️ ${about}</p>
+        <p>🔗 <a href="${linkedin}" target="_blank" class="text-blue-600 underline">View Link</a></p>
+      `;
+
+      container.appendChild(box);
+    });
+
+  } catch (error) {
+    document.getElementById('scroll-box').innerHTML =
+      '<p class="text-red-600 text-center">❌ Failed to load company data.</p>';
+    console.error(error);
+  }
+}
+
+loadCSVData();
+</script>
 
     <script>
         // --- Navbar Toggle for Mobile ---
