--- a/jobseekers.html
+++ b/jobseekers.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="l9l5QvjFSakUCbRz6lC-X-TfGQJOFxEbz-_iZQOJ35c" />
     <meta name="google-adsense-account" content="ca-pub-4074130011096587">
     <meta name="google-site-verification" content="qSZcROSBW4sFubwNpIYlMwvNYbQUA_2svJFPt3hfxls" />
-    <title>Alumni Job Seeker Data Portal</title>
+    <title>Resgistered Company Data Portal</title>
     <!-- Meta Description & Keywords - Adapted for Alumni Portal -->
     <meta name="description" content="Access a portal of registered job seekers from the Journalism and Mass Communication department. Connect with alumni for career opportunities.">
     <meta name="keywords" content="alumni, job seekers, data portal, journalism, mass communication, MGKVP, career, jobs, Uzair B2B">
@@ -122,34 +122,31 @@
         <nav aria-label="breadcrumb">
             <ol class="flex space-x-2 text-gray-600 dark:text-gray-300">
                 <li class="breadcrumb-item"><a href="index.html" class="text-blue-600 hover:underline dark:text-blue-400">Home</a></li>
-                <li class="breadcrumb-item active text-primary font-semibold" aria-current="page">Students Job Seekers Data Portal</li>
+                <li class="breadcrumb-item active text-primary font-semibold" aria-current="page">Registered Company Data Portal</li>
             </ol>
         </nav>
     </div>
 
     <!-- Main Content Area -->
     <div class="container mx-auto mt-8 px-4">
-        <h1 class="text-4xl font-extrabold mb-4 text-gray-900 dark:text-white text-center">Registered Job Seekers</h1>
+        <h1 class="text-4xl font-extrabold mb-4 text-gray-900 dark:text-white text-center">Registered Companies</h1>
         <div class="w-24 h-1 bg-primary mb-6 rounded mx-auto"></div>
         <p class="text-xl mb-8 text-gray-700 dark:text-gray-300 text-center">
-            Click on a <strong class="text-primary">name</strong> to view full student details.
+            Click on a <strong class="text-primary">name</strong> to view full Company details.
         </p>
 
         <!-- Filter Buttons -->
-        <div id="filter-buttons" class="flex justify-center space-x-4 mb-8">
-            <button onclick="filterStudentsTable('All')" class="px-6 py-2 rounded-full bg-primary text-white font-semibold hover:bg-opacity-80 transition-colors duration-200">All</button>
-            <button onclick="filterStudentsTable('Technical')" class="px-6 py-2 rounded-full bg-gray-700 text-white font-semibold hover:bg-gray-600 transition-colors duration-200">Technical</button>
-            <button onclick="filterStudentsTable('Non Technical')" class="px-6 py-2 rounded-full bg-gray-700 text-white font-semibold hover:bg-gray-600 transition-colors duration-200">Non Technical</button>
-        </div>
+        <div id="filter-buttons" class="flex justify-center flex-wrap gap-4 mb-8"></div>
+
 
         <div class="table-container max-w-4xl mx-auto overflow-x-auto bg-lightCard dark:bg-darkCard rounded-lg shadow-lg p-4">
             <table id="data-table" class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
                 <thead class="bg-gray-50 dark:bg-gray-800">
                     <tr>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Name</th>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Category</th>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Education Qualification</th>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Resume</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Company Name</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Work Nature</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Qualification Required</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Link</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white dark:bg-darkCard divide-y divide-gray-200 dark:divide-gray-700">
@@ -164,12 +161,12 @@
         <div class="modal-content-wrapper bg-lightCard dark:bg-darkCard p-8 rounded-lg shadow-xl w-full max-w-md border border-gray-200 dark:border-gray-700">
             <button class="close-button" onclick="closeModal()">&times;</button>
             <h2 id="modal-name" class="text-2xl font-bold mb-4 text-gray-900 dark:text-white"></h2>
-            <p class="mb-2 text-gray-700 dark:text-gray-300"><strong>Age:</strong> <span id="modal-age"></span></p>
-            <p class="mb-2 text-gray-700 dark:text-gray-300"><strong>12th Pass:</strong> <span id="modal-pass"></span></p>
-            <p class="mb-2 text-gray-700 dark:text-gray-300"><strong>Education:</strong> <span id="modal-education"></span></p>
-            <p class="mb-2 text-gray-700 dark:text-gray-300"><strong>Category:</strong> <span id="modal-category"></span></p>
+            <p class="mb-2 text-gray-700 dark:text-gray-300"><strong>Established in:</strong> <span id="modal-age"></span></p>
+            <p class="mb-2 text-gray-700 dark:text-gray-300"><strong>Hiring:</strong> <span id="modal-pass"></span></p>
+            <p class="mb-2 text-gray-700 dark:text-gray-300"><strong>Education Required:</strong> <span id="modal-education"></span></p>
+            <p class="mb-2 text-gray-700 dark:text-gray-300"><strong>Work Nature:</strong> <span id="modal-category"></span></p>
             <p class="mb-4 text-gray-700 dark:text-gray-300"><strong>About:</strong> <span id="modal-about"></span></p>
-            <p><a id="modal-resume" href="#" target="_blank" class="text-primary hover:underline font-semibold">View Resume</a></p>
+            <p><a id="modal-resume" href="#" target="_blank" class="text-primary hover:underline font-semibold">Contact Us</a></p>
         </div>
     </div>
 
@@ -184,143 +181,210 @@
             </div>
         </div>
     </footer>
-
 <script>
-    const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRYH7Rlqwq1rupcx23cXSDMhtkijSWvS0tvdmuBwnWNlNkmwva54bAAEr59igvDXBncR9zGnAoY_lI6/pub?gid=468287746&single=true&output=csv';
+const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRYH7Rlqwq1rupcx23cXSDMhtkijSWvS0tvdmuBwnWNlNkmwva54bAAEr59igvDXBncR9zGnAoY_lI6/pub?gid=468287746&single=true&output=csv';
 
-    let allStudentsData = [];
+let allStudentsData = [];
 
-    const COLUMN_INDEX = {
-        TIMESTAMP: 0,
-        NAME: 1,
-        AGE: 2,
-        IS_12TH_PASS: 3,
-        EDUCATION: 4,
-        JOB_TYPE: 5,
-        ABOUT: 6,
-        RESUME_LINK: 7,
-        WHATSAPP_NUMBER: 8 // No longer used
-    };
+const COLUMN_INDEX = {
+  TIMESTAMP: 0,
+  NAME: 1,
+  AGE: 2,
+  IS_12TH_PASS: 3,
+  EDUCATION: 4,
+  JOB_TYPE: 5,
+  ABOUT: 6,
+  RESUME_LINK: 7,
+  WHATSAPP_NUMBER: 8
+};
 
-    document.addEventListener("DOMContentLoaded", function () {
-        const themeToggle = document.getElementById('themeToggle');
-        const htmlTag = document.documentElement;
+document.addEventListener("DOMContentLoaded", function () {
 
-        const currentTheme = localStorage.getItem('theme');
-        if (currentTheme) {
-            htmlTag.classList.remove('light', 'dark');
-            htmlTag.classList.add(currentTheme);
-            themeToggle.textContent = currentTheme === 'dark' ? '☀️' : '🌙';
-        } else {
-            htmlTag.classList.add('light');
-            themeToggle.textContent = '🌙';
-        }
+  // ✅ THEME SYSTEM (UNCHANGED)
+  const themeToggle = document.getElementById('themeToggle');
+  const htmlTag = document.documentElement;
+  const currentTheme = localStorage.getItem('theme');
 
-        themeToggle.addEventListener('click', () => {
-            if (htmlTag.classList.contains('light')) {
-                htmlTag.classList.remove('light');
-                htmlTag.classList.add('dark');
-                localStorage.setItem('theme', 'dark');
-                themeToggle.textContent = '☀️';
-            } else {
-                htmlTag.classList.remove('dark');
-                htmlTag.classList.add('light');
-                localStorage.setItem('theme', 'light');
-                themeToggle.textContent = '🌙';
-            }
-        });
+  if (currentTheme) {
+    htmlTag.classList.remove('light', 'dark');
+    htmlTag.classList.add(currentTheme);
+    themeToggle.textContent = currentTheme === 'dark' ? '☀️' : '🌙';
+  } else {
+    htmlTag.classList.add('light');
+    themeToggle.textContent = '🌙';
+  }
 
-        fetch(sheetUrl)
-            .then(response => response.text())
-            .then(csv => {
-                const rows = csv.split('\n').slice(1);
-                allStudentsData = rows.map(row => {
-                    const cols = row.split(',');
-                    if (cols.length < (COLUMN_INDEX.RESUME_LINK + 1) || cols.every(col => col.trim() === '')) {
-                        return null;
-                    }
-                    return {
-                        name: cols[COLUMN_INDEX.NAME].trim(),
-                        age: cols[COLUMN_INDEX.AGE].trim(),
-                        is12thPass: cols[COLUMN_INDEX.IS_12TH_PASS].trim(),
-                        education: cols[COLUMN_INDEX.EDUCATION].trim(),
-                        jobType: cols[COLUMN_INDEX.JOB_TYPE].trim(),
-                        about: cols[COLUMN_INDEX.ABOUT].trim(),
-                        resumeLink: cols[COLUMN_INDEX.RESUME_LINK].trim()
-                    };
-                }).filter(student => student !== null);
-
-                filterStudentsTable('All');
-            })
-            .catch(error => console.error('Error fetching data:', error));
-    });
-
-    function filterStudentsTable(category) {
-        const tableBody = document.querySelector('#data-table tbody');
-        tableBody.innerHTML = '';
-
-        let filteredStudents = category === 'All'
-            ? allStudentsData.filter(student => student.is12thPass.toLowerCase() === 'yes')
-            : allStudentsData.filter(student =>
-                student.is12thPass.toLowerCase() === 'yes' &&
-                student.jobType.toLowerCase() === category.toLowerCase()
-            );
-
-        if (filteredStudents.length === 0) {
-            const tr = document.createElement('tr');
-            tr.innerHTML = `<td colspan="4" class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 text-center">No students found in this category.</td>`;
-            tableBody.appendChild(tr);
-            return;
-        }
-
-        filteredStudents.forEach(student => {
-            const tr = document.createElement('tr');
-            tr.innerHTML = `
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-white">
-                    <a href="#" onclick='showDetails(${JSON.stringify(student.name)}, ${JSON.stringify(student.age)}, ${JSON.stringify(student.is12thPass)}, ${JSON.stringify(student.education)}, ${JSON.stringify(student.jobType)}, ${JSON.stringify(student.about)}, ${JSON.stringify(student.resumeLink)})' class="text-primary hover:underline">
-                        ${student.name}
-                    </a>
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-700 dark:text-gray-300">${student.jobType}</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-700 dark:text-gray-300">${student.education}</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-primary">
-                    <a href="${student.resumeLink}" target="_blank" class="hover:underline">Resume</a>
-                </td>
-            `;
-            tableBody.appendChild(tr);
-        });
+  themeToggle.addEventListener('click', () => {
+    if (htmlTag.classList.contains('light')) {
+      htmlTag.classList.replace('light', 'dark');
+      localStorage.setItem('theme', 'dark');
+      themeToggle.textContent = '☀️';
+    } else {
+      htmlTag.classList.replace('dark', 'light');
+      localStorage.setItem('theme', 'light');
+      themeToggle.textContent = '🌙';
     }
+  });
 
-    function showDetails(name, age, pass12, education, jobType, about, resume) {
-        document.getElementById('modal-name').textContent = name;
-        document.getElementById('modal-age').textContent = age;
-        document.getElementById('modal-pass').textContent = pass12;
-        document.getElementById('modal-education').textContent = education;
-        document.getElementById('modal-category').textContent = jobType;
-        document.getElementById('modal-about').textContent = about;
-        document.getElementById('modal-resume').href = resume;
+  // ✅ LOAD CSV
+  fetch(sheetUrl)
+    .then(res => res.text())
+    .then(csv => {
 
-        const modal = document.getElementById('myModal');
-        modal.classList.remove('hidden');
-        setTimeout(() => {
-            modal.classList.add('show');
-        }, 10);
-    }
+      const rows = csv.split('\n').slice(1);
 
-    function closeModal() {
-        const modal = document.getElementById('myModal');
-        modal.classList.remove('show');
-        setTimeout(() => {
-            modal.classList.add('hidden');
-        }, 300);
-    }
+      allStudentsData = rows.map(row => {
 
-    window.onclick = function (event) {
-        const modal = document.getElementById('myModal');
-        if (event.target === modal) {
-            closeModal();
-        }
-    };
+        const cols = row.split(',');
+
+        if (cols.length < 8 || cols.every(val => val.trim() === '')) return null;
+
+        return {
+          name: cols[COLUMN_INDEX.NAME].trim(),
+          age: cols[COLUMN_INDEX.AGE].trim(),
+          is12thPass: cols[COLUMN_INDEX.IS_12TH_PASS].trim(),
+          education: cols[COLUMN_INDEX.EDUCATION].trim(),
+          jobType: cols[COLUMN_INDEX.JOB_TYPE].trim(),
+          about: cols[COLUMN_INDEX.ABOUT].trim(),
+          resumeLink: cols[COLUMN_INDEX.RESUME_LINK].trim()
+        };
+
+      }).filter(Boolean);
+
+      // ✅ CREATE FILTER BUTTONS DYNAMICALLY
+      generateFilterButtons();
+      filterStudentsTable("All");
+
+    })
+    .catch(error => console.error("CSV Error:", error));
+});
+
+
+// ✅ CREATE FILTER BUTTONS BASED ON CSV
+function generateFilterButtons() {
+
+  const filterBox = document.getElementById("filter-buttons");
+  filterBox.innerHTML = "";
+
+  const allBtn = createFilterButton("All");
+  filterBox.appendChild(allBtn);
+
+  const uniqueTypes = [...new Set(allStudentsData.map(s => s.jobType))];
+
+  uniqueTypes.forEach(type => {
+    const btn = createFilterButton(type);
+    filterBox.appendChild(btn);
+  });
+}
+
+
+// ✅ BUTTON BUILDER
+function createFilterButton(label) {
+
+  const btn = document.createElement("button");
+  btn.textContent = label;
+
+  btn.className = "px-6 py-2 rounded-full bg-gray-700 text-white font-semibold hover:bg-gray-600 transition-all duration-200";
+
+  btn.onclick = () => filterStudentsTable(label);
+
+  return btn;
+}
+
+
+// ✅ FILTER TABLE (UNCHANGED FUNCTIONALITY + DYNAMIC FILTER)
+function filterStudentsTable(category) {
+
+  const tableBody = document.querySelector('#data-table tbody');
+  tableBody.innerHTML = '';
+
+  let filteredStudents = category === 'All'
+    ? allStudentsData.filter(student => student.is12thPass.toLowerCase() === 'yes')
+    : allStudentsData.filter(student =>
+        student.is12thPass.toLowerCase() === 'yes' &&
+        student.jobType === category
+      );
+
+  if (filteredStudents.length === 0) {
+    const tr = document.createElement('tr');
+    tr.innerHTML = `
+      <td colspan="4" class="px-6 py-4 text-center text-gray-500">
+        No students found in this category.
+      </td>`;
+    tableBody.appendChild(tr);
+    return;
+  }
+
+  filteredStudents.forEach(student => {
+
+    const tr = document.createElement('tr');
+
+    tr.innerHTML = `
+      <td class="px-6 py-4 font-medium">
+        <a href="#" onclick='showDetails(
+          ${JSON.stringify(student.name)},
+          ${JSON.stringify(student.age)},
+          ${JSON.stringify(student.is12thPass)},
+          ${JSON.stringify(student.education)},
+          ${JSON.stringify(student.jobType)},
+          ${JSON.stringify(student.about)},
+          ${JSON.stringify(student.resumeLink)}
+        )' class="text-primary hover:underline">
+          ${student.name}
+        </a>
+      </td>
+
+      <td class="px-6 py-4">${student.jobType}</td>
+      <td class="px-6 py-4">${student.education}</td>
+
+      <td class="px-6 py-4">
+        <a href="${student.resumeLink}" target="_blank" class="text-primary hover:underline">
+          Contact Us
+        </a>
+      </td>
+    `;
+
+    tableBody.appendChild(tr);
+
+  });
+}
+
+
+// ✅ MODAL SYSTEM (UNCHANGED)
+function showDetails(name, age, pass12, education, jobType, about, resume) {
+
+  document.getElementById('modal-name').textContent = name;
+  document.getElementById('modal-age').textContent = age;
+  document.getElementById('modal-pass').textContent = pass12;
+  document.getElementById('modal-education').textContent = education;
+  document.getElementById('modal-category').textContent = jobType;
+  document.getElementById('modal-about').textContent = about;
+  document.getElementById('modal-resume').href = resume;
+
+  const modal = document.getElementById('myModal');
+  modal.classList.remove('hidden');
+
+  setTimeout(() => {
+    modal.classList.add('show');
+  }, 10);
+}
+
+
+function closeModal() {
+  const modal = document.getElementById('myModal');
+  modal.classList.remove('show');
+
+  setTimeout(() => {
+    modal.classList.add('hidden');
+  }, 300);
+}
+
+
+window.onclick = function (event) {
+  const modal = document.getElementById('myModal');
+  if (event.target === modal) closeModal();
+};
 </script>
+
 </body>
 </html>
