--- a/job.html
+++ b/job.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="light">
 <head>
@@ -230,7 +231,7 @@
 <!-- Photo Frame -->
 <div class="flex justify-center">
   <div class="relative bg-white rounded-3xl shadow-2xl border-4 border-yellow-400 p-3 hover:scale-105 transition-transform duration-500 inline-block">
-    <img src="https://educationsimplified.github.io/mgkvpjournalism/assets/img/hero-bg.jpg" 
+    <img src="https://educationsimplified.github.io/mgkvp/rahul%20uzair.jpg" 
          alt="Class Photo 2022–2025" 
          class="rounded-2xl object-cover w-auto max-w-full shadow-lg">
     
