--- a/index.html
+++ b/index.html
@@ -677,9 +677,9 @@
 
 <!-- ==================== YOUTUBE POPUP ==================== -->
 <div id="youtube-notification">
-  <div class="drag-handle">🔴 How to Run This Website</div>
+  <div class="drag-handle">🔴 Watch This Full Video</div>
   <span class="close-btn" onclick="closeNotification()">✕</span>
-  <h3>Watch Full Shorts Guide</h3>
+  <h3>Before Using the Website</h3>
 
   <iframe 
     src="https://www.youtube.com/embed/HysIcn2dsH4?autoplay=1&playsinline=1&rel=0"
